# NyxKit

./: .gitignore  README.md  main.py  pyproject.toml
auth/: auth_routes.py  login_users.py  register_users.py
config/: database.py
items/: delete_items.py  get_items.py  get_items_by_id.py  items_routes.py  patch_items.py  post_items.py  put_items.py
migrations/watchmen/: watch.py
models/: items.py  users.py
root/: docs.py  root_routes.py  startup.py
security/: verify_jwt_token.py
